--- a/health.css
+++ b/health.css
@@ -2,6 +2,26 @@
     margin:0;
     padding:0;
 }
-.navber{
+body{
+    background-color: grey;
+}
+nav{
+    height:80px;
+    width:100vw;
     display:flex;
+    justify-content:space-around;
+    align-items: center;
+    background-color: rgb(0, 255, 42);
+}
+nav h1{
+    margin: 30px;
+}
+.menubar ul{
+    display:flex;
+
+}
+.menubar li{
+    list-style: none;
+    margin:20px;
+    cursor:pointer;
 }
