--- a/index.css
+++ b/index.css
@@ -2,8 +2,13 @@
     margin:0;
     padding:0;
 }
+h1{
+    text-align: center;
+    text-decoration: underline;
+}
 body{
-    background-color: grey;
+    
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 nav{
     height:80px;
@@ -24,4 +29,34 @@ nav h1{
     list-style: none;
     margin:20px;
     cursor:pointer;
+}
+.homesection{
+    height:80vh;
+    margin: auto;
+
+}
+.slideimg{
+    width: 100%;
+    height:40vh;
+    display:none;
+}
+.slidebtn{
+    display:flex;
+    justify-content:space-around;
+    font-size:50px;
+    margin:0 20px;
+    width: 100%;
+    transform:translateY(-30px);
+}
+.footer {
+    background-color: gray;
+}
+footer ul{ 
+        display: flex;
+        justify-content: center;
+}
+footer li{
+    margin:10px;
+    list-style:none;
+    color:white;
 }
