--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ nav{
     justify-content:space-around;
     align-items: center;
     background-color: rgb(0, 255, 42);
+    overflow:hidden;
 }
 nav h1{
     margin: 30px;
@@ -26,18 +27,18 @@ nav h1{
 
 }
 .menubar li{
-    list-style: none;
+    list-style-type:none;
     margin:20px;
     cursor:pointer;
 }
 .homesection{
-    height:80vh;
+    height:50vh;
     margin: auto;
 
 }
 .slideimg{
     width: 100%;
-    height:40vh;
+    height:50vh;
     display:none;
 }
 .slidebtn{
@@ -48,7 +49,38 @@ nav h1{
     width: 100%;
     transform:translateY(-30px);
 }
+br{
+    color:black;
+    width:100%;
+    height: 20px;
+}
+#service{
+    height: 50vh;
+    margin:auto;
+}
+.sertype{
+    display:flex;
+    justify-content: space-evenly;
+    margin:30px;
+}
+.box{
+    background-color: rgb(18, 207, 91);
+    border: 2px solid rgb(7, 7, 7);
+    box-shadow: 0 0 5px  2px black;
+    width:60px;
+    margin:20px;
+    padding:30px
+}
+.box img{
+    height:40px;
+
+}
+#about{
+    height:50vh;
+}
 .footer {
+    padding:10px;
+    height:30vh;
     background-color: gray;
 }
 footer ul{ 
