--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ nav{
     display:flex;
     justify-content:space-around;
     align-items: center;
-    background-color: rgb(0, 255, 42);
+    background-color: rgba(20, 196, 240, 0.93);
     overflow:hidden;
 }
 nav h1{
@@ -64,7 +64,7 @@ br{
     margin:30px;
 }
 .box{
-    background-color: rgb(18, 207, 91);
+    background-color: rgba(0, 139, 214, 0.916);
     border: 2px solid rgb(7, 7, 7);
     box-shadow: 0 0 5px  2px black;
     width:60px;
